--- a/client/src/locales/en/en.json
+++ b/client/src/locales/en/en.json
@@ -144,6 +144,7 @@
       "AS INFORMAÇÕES SÃO CONFIÁVEIS?":"IS THE INFORMATION RELIABLE?",
       "R: Sim! Todas estão sendo tiradas de fontes oficiais, sendo atualizadas sempre que necessário.":"R: Yes! All are taken from official sources and are updated whenever necessary.",
       "COMO FAÇO PARA ENTRAR EM CONTATO COM OS RESPONSÁVEIS DO SITE?":"HOW DO I CONTACT THE SITE RESPONSIBLE?",
-      "Não tem uma conta? Clique aqui!":"Don't have an account? Click here!"
+      "Não tem uma conta? Clique aqui!":"Don't have an account? Click here!",
+      "DESEJA SUGERIR UM LOCAL?":"WANT TO SUGGEST A LOCATION?"
   }
   
